[package]
name = "gooberproxy-plus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
azalea = { git = "https://github.com/mat-1/azalea.git", branch = "1.19.2", version = "0.6.0" }
azalea-chat = { git = "https://github.com/mat-1/azalea.git", branch = "1.19.2", version = "0.6.0" }
azalea-protocol = { git = "https://github.com/mat-1/azalea.git", branch = "1.19.2", version = "0.6.0" }
clap = { version = "4.1.4", features = ["derive"] }
serde = { version = "1.0.152", features = ["derive"] }
tokio = { version = "1.25.0", features = ["full"] }
toml = "0.7.2"
tracing = "0.1.37"
tracing-futures = { version = "0.2.5", features = ["tokio"] }
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
