[package]
name = "gooberproxy-plus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
azalea-client = { version = "0.6.0", path = "azalea/azalea-client" }
azalea-auth = { version = "0.6.0", path = "azalea/azalea-auth" }
azalea-chat = { version = "0.6.0", path = "azalea/azalea-chat" }
azalea-core = { version = "0.6.0", path = "azalea/azalea-core" }
azalea-crypto = { version = "0.6.0", path = "azalea/azalea-crypto" }
azalea-nbt = { version = "0.6.0", path = "azalea/azalea-nbt" }
azalea-protocol = { version = "0.6.0", path = "azalea/azalea-protocol" }
azalea-registry = { version = "0.6.0", path = "azalea/azalea-registry" }
clap = { version = "4.1.7", features = ["derive"] }
serde = { version = "1.0.152", features = ["derive"] }
thiserror = "1.0.38"
tokio = { version = "1.25.0", features = ["rt-multi-thread", "time", "fs", "macros"], default-features = false }
toml = "0.7.2"
tracing = "0.1.37"
tracing-futures = { version = "0.2.5", features = ["tokio"] }
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
